--- a/booksmith_proj/static/css_files/landing_page.css
+++ b/booksmith_proj/static/css_files/landing_page.css
@@ -12,7 +12,7 @@ svg {
 /* css slider */
 .slider {
   /* adjust here for height of slider */
-  height: 80vh;
+  height: 100vh;
   margin-bottom: 100px;
   position: relative;
 }
@@ -42,7 +42,7 @@ svg {
   top: 20%;
   width: 500px;
   max-width: 80%;
-  margin-bottom: 60px;
+  margin-bottom: 0px;
   z-index: 1;
 }
 .slider .list .item .content p:nth-child(1) {
@@ -50,7 +50,7 @@ svg {
   letter-spacing: 10px;
 }
 .slider .list .item .content h2 {
-  font-size: 70px;
+  font-size: 50px;
   margin: 0;
 }
 .slider .list .item.active {
@@ -108,7 +108,7 @@ svg {
   display: flex;
   gap: 10px;
   width: 100%;
-  height: 250px;
+
   padding: 0 50px;
   box-sizing: border-box;
   overflow: auto;
@@ -118,8 +118,8 @@ svg {
   width: 0;
 }
 .thumbnail .item {
-  width: 200px;
-  height: 220px;
+  width: 180px;
+  height: 200px;
   filter: brightness(0.5);
   transition: 0.5s;
   flex-shrink: 0;
@@ -399,7 +399,8 @@ svg {
 
 .full-image {
   width: 100%;
-  height: 45vh;
+  height: 65vh;
+  border-radius: 20px;
   object-fit: cover;
 }
 
