--- a/booksmith_proj/templates/landing_page.html
+++ b/booksmith_proj/templates/landing_page.html
@@ -150,7 +150,7 @@
         <span class="arrow">_______</span>
       </div>
       <img
-        src="{{ featured_book.image_url }}"
+        src="{{ featured_book.thumbnail_image_url }}"
         alt="{{ featured_book.title }}"
         class="full-image"
       />
