--- a/booksmith_proj/static/css_files/profile.css
+++ b/booksmith_proj/static/css_files/profile.css
@@ -180,3 +180,26 @@
 .book-card .btn:hover {
   background-color: #d62828;
 }
+
+.filter-menu {
+  display: none;
+  position: absolute;
+  top: 60px;
+  left: 20px;
+  background-color: white;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.filter-option {
+  display: block;
+  padding: 8px 16px;
+  text-decoration: none;
+  color: #333;
+  font-size: 16px;
+}
+
+.filter-option:hover {
+  background-color: #f0f0f0;
+}
