--- a/booksmith_proj/templates/search_results.html
+++ b/booksmith_proj/templates/search_results.html
@@ -6,7 +6,9 @@
 <div class="books-container">
   {% if search_results %} {% for book in search_results %}
   <div class="book-card">
-    <img src="{{ book.thumbnail_image_url }}" alt="{{ book.title }}" />
+    <a href="{% url 'product_detail' book.pk %}">
+      <img src="{{ book.thumbnail_image_url }}" alt="{{ book.title }}" />
+    </a>
     <div class="book-info">
       <h3>{{ book.title }}</h3>
 
